[WTF] Media time should not have a constructor which accepts a single int or float. https://bugs.webkit.org/show_bug.cgi?id=124470

Source/WebCore:

Reviewed by Eric Carlson.

Fix the compile error exposed by removing the default parameter in the MediaTime constructor.

* Modules/mediasource/SourceBuffer.cpp:
(WebCore::SourceBuffer::setTimestampOffset):

Source/WTF:

Having a constructor taking a single number value, as it's very easy to accidentially mis-
initialize a MediaTime with a double (automatically casted to a int64_t).

Reviewed by Eric Carlson.

* wtf/MediaTime.h:

Canonical link: https://commits.webkit.org/142709@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159443 268f45cc-cd09-0410-ab3c-d52691b4dbfc